if(NOT TARGET gtest_main AND ENABLE_TEST)
    option(gtest_disable_pthreads "Disable uses of pthreads in gtest." ON)
    add_subdirectory(googletest)
    set_target_properties(gtest_main PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gtest PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock_main PROPERTIES FOLDER Vendors/googletest)
endif()

if(NOT TARGET glm)
    option(BUILD_STATIC_LIBS "" ON)
    option(BUILD_TESTING "" OFF)
    option(GLM_TEST_ENABLE "" OFF)
    add_subdirectory(glm)
    set_target_properties(glm_static PROPERTIES FOLDER Vendors/glm)
    set_target_properties(uninstall PROPERTIES FOLDER Vendors/glm)
endif()
